--- a/public/css/global.css
+++ b/public/css/global.css
@@ -7,6 +7,11 @@ body {
   margin: 0;
 }
 
+input {
+  background: #ffccff;
+  border-radius: 5px;
+}
+
 .radial {
   background: radial-gradient(#ffccff, transparent);
   color: #000000;
@@ -74,7 +79,7 @@ ul {
 
 /******** DIALOG BOX ********/
 
-#overlay {
+.overlay {
   width: 100%;
   height: 100%;
   background: rgba(255, 204, 255, 0.5);
@@ -83,13 +88,13 @@ ul {
   display: table;
 }
 
-#dialog-wrapper {
+.dialog-wrapper {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
 
-#dialog-wrapper div {
+.dialog {
   display: inline-block;
   padding: 20px 30px 20px 30px;
   background: radial-gradient(#ffccff, #990000);
@@ -97,12 +102,12 @@ ul {
   border-radius: 10px 10px 10px 10px;
 }
 
-#dialog-prompt {
+.dialog-prompt {
   margin-bottom: 10px;
   display: block;
 }
 
-#dialog-yes {
+.dialog-yes {
   margin-right: 20px;
 }
 
